# DOA

./: .gitignore
0718(昀祖_昱誠)/ML_DOA/: -O3  123.txt  AVX2_8x8  AVX2_8x8.c  ML_DOA  ML_DOA.c  avx512_test  avx512_test.c  c_avx_thread  c_avx_thread.c  c_avx_version  c_avx_version.c  cu_avx512  cu_func  cu_function  cu_function.cpp  cu_function.cu  debug_avx_version  debug_avx_version.cpp  float_avx_version  float_avx_version.cpp  load_store_test  load_store_test.c  math_func.cpp  math_func.h  music.cu  run_avx_version  run_avx_version.cpp  run_official_version  test  test.c  test1.c  test2.c  trace  trace.c
0718(昀祖_昱誠)/ML_DOA/data/: 2D_MUSIC_dB.csv  2D_MVDR_dB.csv
0718(昀祖_昱誠)/barker_code/: barker_ML  barker_ML.c  barker_MUSIC  barker_MUSIC.c  barker_MVDR  barker_MVDR.c  barker_method2  barker_method2.c  barker_method2_ML  barker_method2_ML.c  barker_method2_MVDR  barker_method2_MVDR.c  hybrid_barker_method2_ML  hybrid_barker_method2_ML.c  hybrid_barker_method2_MUSIC  hybrid_barker_method2_MUSIC.c  hybrid_barker_method2_MVDR  hybrid_barker_method2_MVDR.c  m_barker_ML  m_barker_ML.c  m_barker_MUSIC  m_barker_MUSIC.c  m_barker_MVDR  m_barker_MVDR.c  m_barker_method2  m_barker_method2.c  m_barker_method2_ML  m_barker_method2_ML.c  m_barker_method2_MVDR  m_barker_method2_MVDR.c  m_barker_method2_test  m_barker_method2_test.c  m_hybrid_barker_method2_ML  m_hybrid_barker_method2_ML.c  m_hybrid_barker_method2_MUSIC  m_hybrid_barker_method2_MUSIC.c  m_hybrid_barker_method2_MVDR  m_hybrid_barker_method2_MVDR.c  math_func.cpp  pn_generate  (+1 more)
0718(昀祖_昱誠)/barker_code/data/: 2D_ML_dB.csv  2D_MUSIC_dB.csv  (+1 more)
0718(昀祖_昱誠)/int16_prune-and-search/: .gitignore  456.txt  MUSIC_MVDR_ML.c  avx512_music_mvdr_ml  avx512_music_mvdr_ml.c  c_avx_version8_32_try  c_avx_version8_32_try.c  c_avx_version_prune  c_avx_version_prune.c  c_avx_version_prune2  c_avx_version_prune2.c  c_avx_version_prune8_32  c_avx_version_prune8_32.c  float_MGS_QR_MVDR_prune  float_MGS_QR_MVDR_prune.c  float_MGS_QR_prune  float_MGS_QR_prune.c  float_ML_prune  float_ML_prune.c  float_test_peak  float_test_peak.c  hybrid_MGS_QR_MVDR_prune  hybrid_MGS_QR_MVDR_prune.c  hybrid_MGS_QR_prune  hybrid_MGS_QR_prune.c  hybrid_MGS_QR_prune2  hybrid_MGS_QR_prune2.c  hybrid_ML_prune  hybrid_ML_prune.c  hybrid_test_peak.c  math_func.cpp  music.h  test
0718(昀祖_昱誠)/int32_prune-and-search/: README.md  SNR_test  SNR_test.c  float_MGS_QR_prune  float_MGS_QR_prune.c  float_MGS_test  float_MGS_test.c  float_int_MGS_QR_try8  float_int_MGS_QR_try8.c  float_int_try  float_int_try.c  hybrid_MGS_QR_MVDR_prune  hybrid_MGS_QR_MVDR_prune.c  hybrid_MGS_QR_prune2  hybrid_MGS_QR_prune2.c  hybrid_MGS_test.c  hybrid_ML_prune  hybrid_ML_prune.c  int_MGS_QR  int_MGS_QR.c  m_hybrid_ML_prune2  m_hybrid_ML_prune2.c  m_hybrid_MUSIC_prune2  m_hybrid_MUSIC_prune2.c  m_hybrid_MVDR_prune2  m_hybrid_MVDR_prune2.c  math_func.cpp  test.c  test_func  test_func.cpp
0718(昀祖_昱誠)/multi_user/: c_avx_thread  c_avx_thread.c  c_avx_version  c_avx_version.c  hybrid_ML_prune  hybrid_ML_prune.c  hybrid_MUSIC_prune  hybrid_MUSIC_prune.c  hybrid_MUSIC_prune2  hybrid_MUSIC_prune2.c  hybrid_MVDR_prune  hybrid_MVDR_prune.c  m_hybrid_ML_prune  m_hybrid_ML_prune.c  m_hybrid_ML_prune2  m_hybrid_ML_prune2.c  m_hybrid_MUSIC_prune  m_hybrid_MUSIC_prune.c  m_hybrid_MUSIC_prune2  m_hybrid_MUSIC_prune2.c  m_hybrid_MVDR_prune  m_hybrid_MVDR_prune.c  m_hybrid_MVDR_prune2  m_hybrid_MVDR_prune2.c  math_func.cpp  math_func.h  test.c
0806(思誠)/DOA_2D/: CMakeLists.txt  Directory_Structure.txt  README.md
0806(思誠)/DOA_2D/common/: complex_matrix_ops.c  complex_matrix_ops.h  doa_parameters.h  eigen_qr.c  generate_signal.c  math_func.cpp  math_func.h  multi_beam_weight.c  spatial_spectrum.h  spatial_spectrum_int32.c
0806(思誠)/DOA_2D/float_DOA_2D/: doa2d_ml_float.c  doa2d_music_bmgsqr_float.c
0806(思誠)/DOA_2D/float_DOA_2D/data/: 1D_MUSIC_dB.csv  1D_MVDR_dB.csv
0806(思誠)/DOA_2D/float_DOA_2D_prune_and_search/data/: 1D_ML_dB.csv  1D_MVDR_dB.csv
0806(思誠)/DOA_3D_m/: CMakeLists.txt
0806(思誠)/DOA_3D_m/common/: eigen_qr.h  lu_decomp.c  m_complex_matrix_ops.c  m_complex_matrix_ops.h  m_complex_matrix_ops_int32.c  m_eigen_qr.h  m_lu_decomp.c  m_spatial_spectrum.c  m_spatial_spectrum.h  m_spatial_spectrum_int32.h  math_func_3D.cpp  spatial_spectrum_int32.c  spatial_spectrum_int32.h  thread_pool.c
0806(思誠)/DOA_3D_m/m_float_DOA_3D_pruneAndSearchMU/MUSIC_spectrum_dB/: S_MUSIC_dB.csv  S_MUSIC_dB_prune0.csv  S_MUSIC_dB_prune4.csv  S_MUSIC_dB_prune5.csv
0806(思誠)/DOA_3D_m/m_float_DOA_3D_pruneAndSearchMU_parallelMultipication/: m_doa3d_music_bmgsqr_prunesearch_mu_parMul_float.c
0806(思誠)/DOA_3D_m/m_float_DOA_3D_pruneAndSearchMU_parallelMultipication/MUSIC_spectrum_dB/: S_MUSIC_dB.csv  S_MUSIC_dB_prune2.csv  S_MUSIC_dB_prune3.csv
0806(思誠)/DOA_3D_m/m_float_DOA_3D_pruneAndSearch_parallelMultipication_exceptSearch/: m_doa3d_music_bmgsqr_prunesearch_parMulExceptSearch_float.c  m_doa3d_mvdr_lu_prunesearch_parMulExceptSearch_float.c
0806(思誠)/DOA_3D_m/m_float_int32_DOA_3D_pruneAndSearch_parallelMultipication/: m_doa3d_music_bmgsqr_prunesearch_parMul_float_int32.c
DOA_交接0806/DOA_3D/: CMakeLists.txt  README.md
DOA_交接0806/DOA_3D/common/: color.h  complex_matrix_ops.c  doa_parameters.h  eigen_qr.c  math_func_3D.cpp  math_func_3D.h  spatial_spectrum.h  spatial_spectrum_int32.c  spatial_spectrum_int32.h
DOA_交接0806/DOA_3D/float_DOA_3D/: doa3d_mvdr_bmgsqr_float.c
DOA_交接0806/DOA_3D/float_DOA_3D_prune_and_search/: doa3d_ml_prunesearch_float.c  doa3d_mvdr_lu_prunesearch_float.c
DOA_交接0806/DOA_3D/float_DOA_3D_prune_and_search/MUSIC_spectrum_dB/: S_MUSIC_dB_prune4.csv
DOA_交接0806/DOA_3D/float_int32_DOA_3D/: doa3d_mvdr_bmgsqr_float_int32.c  doa3d_mvdr_lu_float_int32.c
DOA_交接0806/DOA_3D/float_int32_DOA_3D/MUSIC_spectrum_dB/: S_MUSIC_dB.csv
DOA_交接0806/DOA_3D/float_int32_DOA_3D_prune_and_search/: doa3d_music_bmgsqr_prunesearch_float_int32.c  doa3d_mvdr_bmgsqr_prunesearch_float_int32.c  doa3d_mvdr_lu_prunesearch_float_int32.c
DOA_交接0806/DOA_3D/float_int32_DOA_3D_prune_and_search/MUSIC_spectrum_dB/: S_MUSIC_dB_prune0.csv
(+74 files in other folders)
